; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_bcm3510.c_bcm3510_read_unc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_bcm3510.c_bcm3510_read_unc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.bcm3510_state* }
%struct.bcm3510_state = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @bcm3510_read_unc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm3510_read_unc(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.bcm3510_state*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %7 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %6, i32 0, i32 0
  %8 = load %struct.bcm3510_state*, %struct.bcm3510_state** %7, align 8
  store %struct.bcm3510_state* %8, %struct.bcm3510_state** %5, align 8
  %9 = load %struct.bcm3510_state*, %struct.bcm3510_state** %5, align 8
  %10 = call i32 @bcm3510_refresh_state(%struct.bcm3510_state* %9)
  %11 = load %struct.bcm3510_state*, %struct.bcm3510_state** %5, align 8
  %12 = getelementptr inbounds %struct.bcm3510_state, %struct.bcm3510_state* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = shl i32 %14, 8
  %16 = load %struct.bcm3510_state*, %struct.bcm3510_state** %5, align 8
  %17 = getelementptr inbounds %struct.bcm3510_state, %struct.bcm3510_state* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %15, %19
  %21 = load i32*, i32** %4, align 8
  store i32 %20, i32* %21, align 4
  ret i32 0
}

declare dso_local i32 @bcm3510_refresh_state(%struct.bcm3510_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
